Text alignment fixes.

--- a/src/style/FeedCard.css
+++ b/src/style/FeedCard.css
@@ -31,3 +31,9 @@ a {
 .userCard > .card-header > img {
 	margin-bottom: 10px;
 }
+
+.singleCard,
+.feedCard,
+#feedList {
+	text-align: left;
+}
