--- a/src/style/FeedList.css
+++ b/src/style/FeedList.css
@@ -4,7 +4,6 @@
 
 #feedList {
 	margin: 0px 0px;
-	text-align: left;
 }
 
 .loadMoreBtn {
